Fix spacing of page to have everything at the top and the footer at the bottom

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -2,3 +2,4 @@ $color-blue:#336799;
 $color-blue-hover:#29547c;
 $color-light-grey: #f2f2f2;
 $color-dark-grey: #4e4d49;
+$color-text-light-grey: #acacac;
