--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -4,7 +4,7 @@
 }
 
 .main-padding {
-  padding: 20px 20px;
+  padding: 20px 60px;
 } 
 
 main {
@@ -22,21 +22,18 @@ main {
 
 ////////////// INPUTS //////////////
 
-textarea {
-  width: 100%;
-}
-
-input[type=text], input[type=password], input[type=number] {
+input[type=text], input[type=password], input[type=number], textarea {
   font-size: 12pt;
-  padding: 0px 10px;
+  padding: 7px 10px;
   box-sizing: border-box;
   width: 100%;
   height: 40px;
+  margin: 5px 0px 5px 0px;
   border: 1px solid rgb(77, 77, 77);
 }
 
-input[type=text]::placeholder, input[type=password]::placeholder, input[type=number]::placeholder {
-  color: rgb(149, 149, 149);
+input[type=text]::placeholder, input[type=password]::placeholder, input[type=number]::placeholder, textarea::placeholder {
+  color: $color-text-light-grey;
   font-weight: 300;
 }
 
@@ -80,4 +77,8 @@ p {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.form-component {
+  margin-bottom: 20px;
 }
