--- a/app/assets/stylesheets/components/_area_form.scss
+++ b/app/assets/stylesheets/components/_area_form.scss
@@ -1,13 +1,13 @@
 .form-char-limit {
   text-align: right;
-  color: rgb(70, 70, 70);
-  font-size: 14px;
+  color: $color-text-light-grey;
+  font-size: 12px;
+  margin-top: 1px;
+  margin-bottom: 5px;
 }
-
 
 .area-form-page textarea {
   min-height: 75px;
-  font-size: 14pt;
 }
 
 input[type=number].log-lat  {
@@ -15,3 +15,4 @@ input[type=number].log-lat  {
   flex-direction: row;
   width: 100px;
 }
+
