--- a/app/assets/stylesheets/components/_area_show.scss
+++ b/app/assets/stylesheets/components/_area_show.scss
@@ -76,6 +76,7 @@ li .area-show-header-path-link:hover {
   display: none;
   position: absolute;
   right: 0px;
+  margin-top: 5px;
   
   background-color:white;
   min-width: 100px;
